--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>各畫風一覽表｜總覽</title>
-  <link rel="stylesheet" href="../assets/style.css" />
+  <link rel="stylesheet" href="./assets/style.css" />
 
   <!-- Lightbox2（CDN） -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.4/dist/css/lightbox.min.css" />
-  <link rel="stylesheet" href="../assets/lightbox.css">
+  <link rel="stylesheet" href="./assets/lightbox.css">
 </head>
 
 <body>
@@ -251,3 +251,4 @@
 
 </body>
 </html>
+
